# molcraft-agent-run

./: .env.example  .gitignore  DECISION_LOG.md  README.md  agent.yaml  check_env.py  check_submission.py  experiments.jsonl  main.py  program.md  pyproject.toml  run_agent.sh  run_hybrid.py  setup_llm.sh
docs/: BRANCH_STRATEGY.md  code_evolution_round_1.md  diagnosis_round_1.md  diagnosis_round_2.md  experiment_log.md  experiment_round_1.md  experiment_round_2.md  final_iteration_report.md  final_report.md  iteration_log.jsonl  literature_analysis_round_1.md  research_report.md
molcraft_agent/: __init__.py  experiments.py  tools.py
output/: pocket_analysis.json  pocket_guided_candidates.json  result.csv  result.csv.bak  result.csv.bak.old
papers/: autonomous_agents_survey.md  coscientist.md  deep_lead_optimization_jacs.md  summary.md
prompts/: program_v3.md
src/: config.py  docking.py  evaluator.py  evolution.py  generator.py  literature_seeds.py  pocket_analyzer.py  receptor.py  structure_guided_design.py  synthesis_v2.py
tools/: dock.py  evaluate.py  generate.py  git_advance.py  pipeline.py  synthesize.py
tutorial/: 00-baseline.md  01-understanding.md  02-improvement.md  README.md
