[project]
name = "molcraft-agent"
version = "0.1.0"
description = "靶向分子研发与合成规划智能体 —— AI4S 药物发现基线系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "rdkit>=2024.0",
    "vina>=1.2",
    "meeko>=0.5",
    "gemmi>=0.6",
    "openbabel-wheel>=3.1",
    "numpy",
    "pandas",
    "biopython",
    "scipy",
    "requests",
    "kimi-agent-sdk>=0.0.3",
    "kimi-cli>=1.12.0",
]

[project.scripts]
molcraft = "run:main"
